<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">播放器</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_ui">UIActivity</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <color name="text_theme">#ddd</color>
    <color name="back_theme1">#5fff</color>
    <color name="back_theme2">#0fff</color>

    <style name="ui_radiobutton">
        <item name="android:layout_weight">1</item>
        <item name="android:layout_width">0dp</item>
        <item name="android:layout_height">match_parent</item>
        <item name="android:button">@null</item>
        <item name="android:gravity">center</item>
        <item name="android:textColor">@color/radiobuttun_selete</item>
    </style>

    <style name="localmusic_linear">
        <item name="android:orientation">horizontal</item>
        <item name="android:layout_width">match_parent</item>
        <item name="android:layout_height">0dp</item>
        <item name="android:layout_weight">1</item>
        <item name="android:gravity">center_vertical</item>
        <item name="android:background">@color/back_theme2</item>
    </style>

    <style name="localmusic_imageleft">
        <item name="android:layout_width">30dp</item>
        <item name="android:layout_height">30dp</item>
        <item name="android:layout_marginLeft">30dp</item>
    </style>

    <style name="localmusic_linearchil">
        <item name="android:layout_width">0dp</item>
        <item name="android:layout_height">match_parent</item>
        <item name="android:layout_marginLeft">20dp</item>
        <item name="android:layout_weight">1</item>
        <item name="android:orientation">vertical</item>
    </style>

    <style name="localmusic_imageright">
        <item name="android:layout_width">30dp</item>
        <item name="android:layout_height">30dp</item>
        <item name="android:layout_marginLeft">20dp</item>
        <item name="android:layout_marginRight">30dp</item>
    </style>

    <style name="chillinear_texttop">
        <item name="android:layout_width">match_parent</item>
        <item name="android:layout_height">0dp</item>
        <item name="android:layout_weight">3</item>
        <item name="android:textSize">20dp</item>
        <item name="android:textStyle">bold</item>
        <item name="android:textColor">@color/text_theme</item>
        <item name="android:gravity">center_vertical</item>
    </style>

    <style name="chillinear_textbottom">
        <item name="android:layout_width">match_parent</item>
        <item name="android:layout_height">0dp</item>
        <item name="android:layout_weight">2</item>
        <item name="android:textSize">16dp</item>
        <item name="android:textColor">@color/text_theme</item>
        <item name="android:gravity">center_vertical</item>
    </style>

    <style name="localmusic_toptext">
        <item name="android:layout_weight">1</item>
        <item name="android:layout_width">0dp</item>
        <item name="android:layout_height">match_parent</item>
        <item name="android:gravity">center</item>
        <item name="android:textColor">@color/text_theme</item>
    </style>

    <string name="title_activity_play_music">PlayMusicActivity</string>

    <string name="menu_text_system">系统</string>
    <string name="menu_set_model">设置</string>
    <string name="menu_night_model">夜间模式</string>
    <string name="menu_sleep_model">睡眠模式</string>
    <string name="menu_change_backgroup">更换皮肤</string>
    <string name="menu_exit">退出</string>

    <style name="menu_grid_button">
        <item name="android:drawableLeft">@drawable/ic_launcher</item>
        <item name="android:button">@null</item>
        <item name="android:layout_marginTop">30dp</item>
        <item name="android:drawablePadding">50dp</item>
        <item name="android:layout_width">200dp</item>
        <item name="android:layout_height">wrap_content</item>
    </style>
</resources>
