<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/menu_backgroup"
    android:orientation="vertical"
    >
    <TextView
        android:id="@+id/menu_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/menu_text_system"
        android:layout_marginTop="10dp"
        android:textSize="25sp"
        />
    <ScrollView
        android:id="@+id/menu_scrollview"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:scrollbars="none"
        >

        <RadioGroup
            android:id="@+id/menu_radiogroup"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_gravity="center_horizontal"
            >
            <RadioButton
                android:id="@+id/menu_button_set_model"
                style="@style/menu_grid_button"
                android:text="@string/menu_set_model"

                />
            <RadioButton
                android:id="@+id/menu_button_night_model"
                style="@style/menu_grid_button"
                android:text="@string/menu_night_model"
                />
            <RadioButton
                android:id="@+id/menu_button_sleep_model"
                style="@style/menu_grid_button"
                android:text="@string/menu_sleep_model"
                />
            <RadioButton
                android:id="@+id/menu_button_change_backgroup"
                style="@style/menu_grid_button"
                android:text="@string/menu_change_backgroup"
                />
            <RadioButton
                android:id="@+id/menu_button_exit"
                style="@style/menu_grid_button"
                android:text="@string/menu_exit"
                />


        </RadioGroup>


    </ScrollView>

</LinearLayout>